added prettier and husky
