# swagger.json
@@ -327,6 +327,25 @@
 					"otp"
 				],
 				"type": "object"
+			},
+			"AuthResetPass": {
+				"properties": {
+					"password": {
+						"type": "string"
+					},
+					"otp": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"password",
+					"otp",
+					"email"
+				],
+				"type": "object"
 			}
 		},
 		"securitySchemes": {
@@ -827,6 +846,38 @@
 						"application/json": {
 							"schema": {
 								"$ref": "#/components/schemas/AuthVerifyEmail"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/auth/resetPassword": {
+			"post": {
+				"operationId": "ResetPassword",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/APIResponse_Message_"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Authentication"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/AuthResetPass"
 							}
 						}
 					}
